// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`listFunctions > V2 API > listFunctions includes runtimeAPIVersion when parseISC is true 1`] = `
{
  "displayName": undefined,
  "extension": ".ts",
  "generator": undefined,
  "inputModuleFormat": "esm",
  "mainFile": "function.ts",
  "name": "function",
  "runtime": "js",
  "runtimeAPIVersion": 2,
  "schedule": undefined,
  "srcFile": undefined,
}
`;

exports[`listFunctions > v1 > Can list function main files from multiple source directories with listFunctions() 1`] = `
[
  {
    "displayName": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": ".netlify/internal-functions/function.js",
    "name": "function",
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": ".netlify/internal-functions/function_internal.js",
    "name": "function_internal",
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": "netlify/functions/function.js",
    "name": "function",
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": "netlify/functions/function_user.js",
    "name": "function_user",
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcFile": undefined,
  },
]
`;

exports[`listFunctions > v1 > Can list function main files with listFunctions() 1`] = `
[
  {
    "displayName": undefined,
    "extension": ".zip",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": "test.zip",
    "name": "test",
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": "test.js",
    "name": "test",
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".ts",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": "five/index.ts",
    "name": "five",
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": "four.js/four.js.js",
    "name": "four",
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": "one/index.js",
    "name": "one",
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": "two/two.js",
    "name": "two",
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": "",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": "test",
    "name": "test",
    "runtime": "go",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcFile": undefined,
  },
]
`;

exports[`listFunctions > v1 > listFunctions includes in-source config declarations 1`] = `
[
  {
    "displayName": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "cjs",
    "mainFile": "cron_cjs.js",
    "name": "cron_cjs",
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "cjs",
    "mainFile": "cron_cjs_exports.js",
    "name": "cron_cjs_exports",
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "cjs",
    "mainFile": "cron_cjs_renamed.js",
    "name": "cron_cjs_renamed",
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_esm.js",
    "name": "cron_esm",
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_esm_additional_schedule_import.js",
    "name": "cron_esm_additional_schedule_import",
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_esm_no_direct_export.js",
    "name": "cron_esm_no_direct_export",
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_esm_no_direct_export_renamed.js",
    "name": "cron_esm_no_direct_export_renamed",
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_esm_no_direct_export_renamed_reassigned.js",
    "name": "cron_esm_no_direct_export_renamed_reassigned",
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_esm_renamed.js",
    "name": "cron_esm_renamed",
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_esm_schedule_multi_import.js",
    "name": "cron_esm_schedule_multi_import",
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_esm_schedule_reassigned.js",
    "name": "cron_esm_schedule_reassigned",
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".ts",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_ts.ts",
    "name": "cron_ts",
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcFile": undefined,
  },
  {
    "displayName": undefined,
    "extension": ".ts",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_ts_renamed.ts",
    "name": "cron_ts_renamed",
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcFile": undefined,
  },
]
`;
